# swarm-os

./: .gitignore  BLOG.md  Dockerfile  HACKATHON_DEMO_SCRIPT.md  README.md  SETUP.md  TRAINING_ARCHITECTURE_BLUEPRINT.md  app.py  client.py  inference.py  kaggle_training_notebook.py  kaggle_visualize_training.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward_log.jsonl  start.sh  train.py  train_kaggle.py  training_summary.json  updated_blueprint.md  validate_submission.py  walkthrough.md
backend/: Dockerfile.sandbox  auto_runner.py  config.yaml  main.py  requirements.txt  snorkel_logger.py  swarm_dataset.jsonl  test_run.py  test_sandbox.py
backend/agents/: orchestrator.py
backend/engine/: advanced_grpo_pipeline.py  causal_graph.py  colab_grpo_training.py  colab_openenv_submission.py  counterfactual.py  docker_sandbox.py  evaluator.py  openenv_swarm.py  physics.py  rewards.py  schema_drift.py  tensor_challenges.py  trl_live_train.py
backend/model/: config.py  inference.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/CausalGraph/: CausalDAG.jsx  CustomNode.jsx
frontend/src/components/Chat/: CommandPrompt.jsx  EnterpriseChat.jsx  TranslateToggle.jsx
frontend/src/data/: scenarios.js
frontend/src/hooks/: useSimulation.js
frontend/src/store/: simulationStore.jsx
outputs/: baseline_scores.json  validation_report.json
server/: __init__.py  app.py
swarm_openenv_env/: __init__.py  environment.py  graders.py  models.py  tasks.py
(+13 files in other folders)
